# Thesis_2026

./: .dockerignore  .gitignore  config.yaml  docker-compose.yml  mdl.json  test.ipynb
devops/: Dockerfile
libs/base/: pyproject.toml
libs/logger/: README.md  pyproject.toml
libs/logger/src/logger/: logger.py
libs/opensearch/: pyproject.toml
libs/pg/: pyproject.toml
libs/pg/src/pg/: model.py
libs/pg/src/pg/alembic/: env.py
libs/pg/src/pg/alembic/versions/: 20260324_add_extent_fields.py  20260324_replace_legacy_aqi_schema.py  20260329_update_aqi_schemas.py
libs/pg/src/pg/controller/: district_controller.py  schemas.py  utils.py
services/aqi_agent/: README.md  pyproject.toml
services/aqi_agent/src/aqi_agent/: __init__.py  app.py  settings.yaml
services/aqi_agent/src/aqi_agent/api/helpers/: exception_handler.py
services/aqi_agent/src/aqi_agent/api/routers/v1/: aqi_agent.py
services/aqi_agent/src/aqi_agent/application/: service.py
services/aqi_agent/src/aqi_agent/domain/answer_generator/: service.py
services/aqi_agent/src/aqi_agent/domain/autocorrector/: fuzzy_corrector.py  models.py  service.py
services/aqi_agent/src/aqi_agent/domain/criticAgent/: service.py
services/aqi_agent/src/aqi_agent/domain/example_management/: service.py
services/aqi_agent/src/aqi_agent/domain/fixsql_agent/prompts/: prompt.py
services/aqi_agent/src/aqi_agent/domain/history_retrieval/: service.py
services/aqi_agent/src/aqi_agent/domain/human_intervent/: service.py
services/aqi_agent/src/aqi_agent/domain/human_intervent/prompts/: human_intervent.py
services/aqi_agent/src/aqi_agent/domain/interrupt_checker/: service.py
services/aqi_agent/src/aqi_agent/domain/memory_updater/: service.py
services/aqi_agent/src/aqi_agent/domain/memory_updater/conversation_summarizer/: prompt.py  service.py
services/aqi_agent/src/aqi_agent/domain/memory_updater/conversation_title_generator/: prompt.py  service.py
services/aqi_agent/src/aqi_agent/domain/memory_updater/upload_message_memory/: service.py
services/aqi_agent/src/aqi_agent/domain/planner/: service.py
services/aqi_agent/src/aqi_agent/domain/rephrase_question/: service.py
services/aqi_agent/src/aqi_agent/domain/rephrase_question/prompts/: prompt.py
services/aqi_agent/src/aqi_agent/domain/sql_execution_handler/: service.py
services/aqi_agent/src/aqi_agent/domain/sql_generator/: base.py
services/aqi_agent/src/aqi_agent/domain/sql_generator/match_generator/: service.py
services/aqi_agent/src/aqi_agent/domain/sql_generator/match_generator/prompts/: prompt.py
services/aqi_agent/src/aqi_agent/domain/sql_generator/mismatch_generator/: service.py
services/aqi_agent/src/aqi_agent/shared/: resources.py  utils.py
services/aqi_agent/src/aqi_agent/shared/models/: __init__.py  correction.py  schemas.py  state.py
services/aqi_agent/src/aqi_agent/shared/settings/: __init__.py  autocorrector.py  redis.py  sql_execution.py
(+151 files in other folders)
