[project]
name = "logger"
version = "1.0"
description = "A lightweight and extensible logging library designed for modern Python applications."
readme = "README.md"
authors = [
    { name = "bui.quang.manh", email = "bui.quang.manh@sun-asterisk.com" }
]
requires-python = ">=3.11"
dependencies = [
    "structlog>=25.4.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
