[project]
name = "opensearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "annv-3656", email = "nguyen.viet.an@sun-asterisk.com" }
]
requires-python = ">=3.11"
dependencies = [
    "opensearch-py>=3.1.0",
]

[project.scripts]
opensearch = "opensearch:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.11.0"]
build-backend = "uv_build"
