[project]
name = "pg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "annv-3656", email = "nguyen.viet.an@sun-asterisk.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
]

[project.scripts]
pg = "pg:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.11.0"]
build-backend = "uv_build"
